force-app/main/default/objects/Booking_Itinerary__c/Booking_Itinerary__c.object-meta.xml
<CustomObject>
    <label>Booking Itinerary</label>
    <nameField>
        <displayFormat>BIN-{0000}</displayFormat>
        <label>Booking Itinerary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Itineraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>