force-app/main/default/objects/Booking_Itinerary__c/fields/Itinerary_Id__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Id__c</fullName>
    <description>ID OF Itinerary</description>
    <label>Itinerary Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>