force-app/main/default/objects/Booking_Itinerary__c/fields/Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of Package</description>
    <label>Package ID</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipName>Booking_Itineraries</relationshipName>
    <type>Lookup</type>
</CustomField>